--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,8 +5,14 @@ plugins:
 - jekyll-remote-theme 
 # - jekyll-redirect-from
 
-title: Antonio Feijao in UK. AWS Infrastructure Architect with Networking and Security Specialism.
+title: Antonio Feijao in UK. |
+    AWS Infrastructure Architect with Networking and Security Specialism.
+    
 description: Antonio Feijao in UK whoami and about personal website.
+
+logo: "https://avatars.githubusercontent.com/u/2548084"
+
+#/assets/img/logo.png
 
 show_downloads: false #  ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 #google_analytics: [Your Google Analytics tracking ID]
