--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,11 @@ plugins:
 - jekyll-remote-theme 
 # - jekyll-redirect-from
 
-title: Antonio Feijao in UK. AWS Infrastructure Architect with Networking and Security Specialism.
+locale: en
+
+title_separator: "-"
+
+title: Antonio Feijao in UK - AWS Infrastructure Architect with Networking and Security Specialism
     
 description: Antonio Feijao in UK whoami and about personal website.
 
