--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,3 +21,10 @@ logo: https://avatars.githubusercontent.com/u/2548084
 
 show_downloads: false #  ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 #google_analytics: [Your Google Analytics tracking ID]
+
+
+# Outputting
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+timezone: Europe/London # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
