--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,8 @@ title: Antonio Feijao in UK - AWS Infrastructure Architect with Networking and S
     
 description: Antonio Feijao in UK whoami and about personal website.
 
-logo: https://avatars.githubusercontent.com/u/2548084
+logo: https://pbs.twimg.com/profile_images/1035490485522063361/SzamsrVO_400x400.jpg
+#https://avatars.githubusercontent.com/u/2548084
 
 #/assets/img/logo.png
 
