--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@ title_separator: "-"
 
 title: Antonio Feijao in UK - AWS Infrastructure Architect with Networking and Security Specialism
     
-description: Antonio Feijao in UK whoami and about personal website.
+description: Antonio Feijao in UK personal website.
 
 logo: https://pbs.twimg.com/profile_images/1035490485522063361/SzamsrVO_400x400.jpg
 #https://avatars.githubusercontent.com/u/2548084
