--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,9 +11,9 @@ locale: en
 
 title_separator: "-"
 
-title: Antonio Feijao in UK - AWS Infrastructure Architect with Networking and Security Specialism
+title: Antonio Feijao - AWS Infrastructure Architect with Networking and Security Specialism
     
-description: Antonio Feijao in UK personal website.
+description: Antonio Feijao, AWS Infrastructure Architect with Networking and Security Specialism personal website.
 
 logo: https://pbs.twimg.com/profile_images/1035490485522063361/SzamsrVO_400x400.jpg
 #https://avatars.githubusercontent.com/u/2548084
