--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,8 @@ locale: en
 
 title_separator: "-"
 
-title: Antonio Feijao - AWS Infrastructure Architect with Networking and Security Specialism
+title: -> Antonio Feijao
+AWS Infrastructure Architect with Networking and Security Specialism
     
 description: Antonio Feijao, AWS Infrastructure Architect with Networking and Security Specialism personal website.
 
