--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,9 +17,9 @@ locale: en
 
 title_separator: "-"
 
-title: Antonio Feijao - AWS Infrastructure Architect with Networking and Security Specialism
+title: Antonio Feijao
     
-description: Antonio Feijao, AWS Infrastructure Architect with Networking and Security Specialism personal website.
+description: AWS Infrastructure Architect with Networking and Security Specialism personal website.
 
 logo: /assets/images/AntonioFeijao-photo0001-800x800.jpg
 
