--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 # source https://github.com/jekyll/minima/blob/master/_config.yml
 
-title: Your awesome title
+title: Antonio Feijao AWS Infrastructure Architect with Networking and Security Specialism.
+
 
 author:
   name: Antonio Feijao
