--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,15 +1,124 @@
-remote_theme: pages-themes/minimal@v0.2.0
-#theme: jekyll-theme-minimal
-#theme: jekyll-theme-slate
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Antonio Feijao
+email:
+description: >- # this means to ignore newlines until "baseurl:"
+  Antonio Feijao, Antonio Feijao UK, AWS Infrastructure Architect with Networking and
+  Security Specialism personal website.
+  AWS, Python 3, Cyber Security, Linux, MacOS
+twitter_username: antoniofeijaouk
+github_username: antoniofeijaouk
+minimal_mistakes_skin: default
+search: true
+
+# Build settings
+markdown: kramdown
+remote_theme: mmistakes/minimal-mistakes
+# Outputting
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+include:
+  - _pages
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
+author:
+  name   : "Antonio Feijao"
+  avatar : "/assets/images/AntonioFeijao-photo0001-320x320.jpeg"
+  bio    : "AWS Infrastructure Security Architect."
+  links:
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://www.antoniofeijao.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/AntonioFeijaoUK"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/AntonioFeijaoUK"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/AntonioFeijaoUK"
+
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/AntonioFeijaoUK"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/AntonioFeijaoUK"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/AntonioFeijaoUK"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
+  
+  
+
+
 
 url: "https://antoniofeijao.com" # the base hostname & protocol for your site
-  
-plugins:
-- jekyll-remote-theme
-- jekyll-sitemap
-- jekyll-feed
-- jekyll-seo-tag
-# - jekyll-redirect-from
 
 encoding: "utf-8"
 
@@ -19,19 +128,7 @@ title_separator: "-"
 
 title: Antonio Feijao
     
-description: AWS Infrastructure Architect with Networking and Security Specialism personal website.
-
-logo: /assets/images/AntonioFeijao-photo0001-320x320.jpeg
-
-#https://avatars.githubusercontent.com/u/2548084
-#/assets/img/logo.png
-
 show_downloads: false #  ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 #google_analytics: [Your Google Analytics tracking ID]
 
-
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
 timezone: Europe/London # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
