--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Antonio Feijao
+title: Antonio Feijao, Antonio Feijao UK
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Antonio Feijao, Antonio Feijao UK, AWS Infrastructure Architect with Networking and
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   AWS, Python 3, Cyber Security, Linux, MacOS
 twitter_username: antoniofeijaouk
 github_username: antoniofeijaouk
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark #default
 search: true
 
 # Build settings
