--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Antonio Feijao, Antonio Feijao UK
+title: Antonio Feijao UK, AWS Infrastructure Architect, Networking, Security, AWS, Python 3, Cyber Security, Linux, MacOS
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Antonio Feijao, Antonio Feijao UK, AWS Infrastructure Architect with Networking and
