--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,20 +13,28 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 title: Antonio Feijao UK, AWS Infrastructure Architect, Networking, Security, AWS, Python 3, Cyber Security, Linux, MacOS
+
 email:
+
 description: >- # this means to ignore newlines until "baseurl:"
-  Antonio Feijao, Antonio Feijao UK, AWS Infrastructure Architect with Networking and
-  Security Specialism personal website.
+  Antonio Feijao UK, AWS Infrastructure Architect with Networking and
+  Security Specialism.
   AWS, Python 3, Cyber Security, Linux, MacOS
+
 twitter_username: antoniofeijaouk
+
 github_username: antoniofeijaouk
+
 minimal_mistakes_skin: dark #default
+
 search: true
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -59,7 +67,7 @@ plugins:
 
 author:
   name   : "Antonio Feijao"
-  avatar : "/assets/images/AntonioFeijao-photo0001-320x320.jpeg"
+  avatar : "/assets/images/Antonio-Feijao-Genomics-headshot-35-square_small.jpeg"
   bio    : "AWS Infrastructure Security Architect."
   links:
     - label: "Website"
@@ -115,8 +123,6 @@ tag_archive:
   path: /tags/
   
   
-
-
 
 #url: "https://antoniofeijao.com" # the base hostname & protocol for your site
 
