--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,12 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Antonio Feijao UK, AWS Infrastructure Architect, Networking, Security, AWS, Python 3, Cyber Security, Linux, MacOS
+title: Antonio Feijao UK, AWS Security and Infrastructure Architect @GenomicsEngland, Networking, Security, AWS, Python 3, Cyber Security, Linux, MacOS
 
 email:
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Antonio Feijao UK, AWS Infrastructure Architect @GenomicsEngland with Networking and
+  Antonio Feijao UK, AWS Security and Infrastructure Architect @GenomicsEngland with Networking and
   Security Specialism.
   AWS, Python 3, Cyber Security, Linux, MacOS
 
