--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -76,6 +76,9 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/AntonioFeijaoUK"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "https://www.linkedin.com/in/antoniofeijaouk"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/AntonioFeijaoUK"
@@ -85,6 +88,9 @@ author:
 
 footer:
   links:
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "https://www.linkedin.com/in/antoniofeijaouk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/AntonioFeijaoUK"
@@ -94,6 +100,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/AntonioFeijaoUK"
+    - label: "Buy-me-a-Coffee"
+      icon: "![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)"
+      url: "https://ko-fi.com/B0B019526"
 
 defaults:
   # _posts
