--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -77,7 +77,7 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/AntonioFeijaoUK"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/antoniofeijaouk"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -89,7 +89,7 @@ author:
 footer:
   links:
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/antoniofeijaouk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
@@ -101,8 +101,12 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
-      icon: "![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)"
+      icon: "https://ko-fi.com/img/githubbutton_sm.svg"
       url: "https://ko-fi.com/B0B019526"
+    - label: "Buy-me-a-Coffee"
+      icon: "fab fa-fw fa-mug"
+      url: "https://ko-fi.com/B0B019526"
+
 
 defaults:
   # _posts
