--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -86,9 +86,8 @@ author:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
-      icon: "fab fa-fw fa-coffee"
+      icon: "fa fa-coffee"
       url: "https://ko-fi.com/antoniofeijaouk"
-
 
 footer:
   links:
@@ -105,9 +104,8 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
-      icon: ""
-      url: "<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Bui-me-a-Coffee', '#ff5f5f', 'B0B019526');kofiwidget2.draw();</script>"
-
+      icon: "fa fa-coffee"
+      url: "https://ko-fi.com/antoniofeijaouk"
 
 defaults:
   # _posts
