--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -104,8 +104,8 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
-      icon: "fa fa-coffee"
-      url: <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Bui-me-a-Coffee', '#ff5f5f', 'B0B019526');kofiwidget2.draw();</script> 
+      icon: <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Bui-me-a-Coffee', '#ff5f5f', 'B0B019526');kofiwidget2.draw();</script>
+      url: 
 
 defaults:
   # _posts
