--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /skills/
   - title: "Feedback"
     url: /feedback/
-  - title: "Cyber-Security-Updates"
-    url: /cyber-security-updates/
+  - title: "Links-cyber-security-learning-education"
+    url: /links/
   - title: "Pages"
     url: /categories/#page
