--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -65,6 +65,8 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-last-modified-at
+
 
 author:
   name   : "Antonio Feijao"
