--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -116,7 +116,8 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      #defaul value > `layout: single`
+      layout: splash
       classes: wide
       author_profile: true
       read_time: true
@@ -128,7 +129,8 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: single
+      #defaul value > `layout: single`
+      layout: splash
       classes: wide
       author_profile: true
 
