--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,15 +79,15 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/antoniofeijaouk"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/AntonioFeijaoUK"
+    # - label: "Twitter"
+    #   icon: "fab fa-fw fa-twitter-square"
+    #   url: "https://twitter.com/AntonioFeijaoUK"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/AntonioFeijaoUK"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/AntonioFeijaoUK"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
+    #   url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
       icon: "fa fa-coffee"
       url: "https://ko-fi.com/antoniofeijaouk"
@@ -97,15 +97,15 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/antoniofeijaouk"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/AntonioFeijaoUK"
+    # - label: "Twitter"
+    #   icon: "fab fa-fw fa-twitter-square"
+    #   url: "https://twitter.com/AntonioFeijaoUK"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/AntonioFeijaoUK"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/AntonioFeijaoUK"
+    # - label: "Instagram"
+    #   icon: "fab fa-fw fa-instagram"
+    #   url: "https://instagram.com/AntonioFeijaoUK"
     - label: "Buy-me-a-Coffee"
       icon: "fa fa-coffee"
       url: "https://ko-fi.com/antoniofeijaouk"
