--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -124,6 +124,7 @@ defaults:
       comments: true
       share: true
       related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
@@ -133,6 +134,7 @@ defaults:
       layout: splash
       classes: wide
       author_profile: true
+      show_date: true
 
 category_archive:
   type: liquid
