minor word change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_name: Antonio Feijao UK, Cyber Security Archictect, learning by doing.
 site_url: https://www.antoniofeijao.com/
 site_author: Antonio Feijao UK
 site_description: >-
-  Antonio Feijao UK, Cyber Security Architect @GenomicsEngland,
-  expertise and skills on AWS, Networking, Security, Infrastructure, CyberSecurity, Linux, MacOS, Python
+  Antonio Feijao UK, Cyber Security Architect @GenomicsEngland.
+  Expertise and skills on AWS, Networking, Security, Infrastructure, CyberSecurity, Linux, MacOS, Python
 
 
 # Copyright
