--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
 # Project information
-site_name: Antonio Feijao UK, Cyber Security Archictect, learning by doing.
+site_name: Antonio Feijao UK, Cyber Security Architect, learning by doing.
 site_url: https://www.antoniofeijao.com/
 site_author: Antonio Feijao UK
 site_description: >-
   Antonio Feijao UK, Cyber Security Architect @GenomicsEngland.
-  Expertise and skills on AWS, Networking, Security, Infrastructure, CyberSecurity, Linux, MacOS, Python
+  Expertise and skills in AWS, Networking, Security, Infrastructure, CyberSecurity, Linux, MacOS, Python
 
 
 # Copyright
