--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,14 +78,15 @@ extra:
 
       
 plugins:
-  - blog
+  - blog:
+       enabled: true
   - search:
-    lang: en
+      lang: en
   - git-revision-date-localized:
-    enable_creation_date: iso_datetime
-    type: date
-    enable_creation_date: true
-    fallback_to_build_date: true
+      enable_creation_date: iso_datetime
+      type: date
+      enable_creation_date: true
+      fallback_to_build_date: true
   
   
 
