--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,15 +78,23 @@ extra:
 
       
 plugins:
+  - social:
+      enabled: true
   - blog:
        enabled: true
+       blog_dir: .
   - search:
+      enabled: true
       lang: en
   - git-revision-date-localized:
+      enabled: true
       enable_creation_date: iso_datetime
       type: date
       enable_creation_date: true
       fallback_to_build_date: true
+  - tags:
+      enabled: true
+
   
   
 
