--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ copyright: Copyright &copy; 2024, <a href="https://www.antoniofeijao.com/">Anton
 
 theme:
   name: material
-  logo: /assets/images/gebhartyler-AQpOwYbm_Jg-unsplash.jpeg
+  logo: ../assets/images/gebhartyler-AQpOwYbm_Jg-unsplash.jpeg
   features:
     #- navigation.instant
     - navigation.tracking
