--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,17 +105,54 @@ plugins:
   
   
 
-# Extensions
+# Extensions by AF
+#markdown_extensions:
+###  - pymdownx.highlight:
+###      anchor_linenums: true
+  #- pymdownx.inlinehilite
+###  - pymdownx.snippets
+  #- pymdownx.superfences
+  #- attr_list
+  #- md_in_html
+  #- admonition
+  #- pymdownx.details
+### missing from recommendations
+
+## source https://squidfunk.github.io/mkdocs-material/setup/extensions/#recommended-configuration
 markdown_extensions:
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - attr_list
-  - md_in_html
+
+  # Python Markdown
+  - abbr
   - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
   - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
 
 
 ## Page tree
