--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ copyright: Copyright &copy; 2024, <a href="https://www.antoniofeijao.com/">Anton
 theme:
   name: material
   favicon: /favicon.ico
-  logo: /assets/images/Antonio-Feijao-UK.jpeg
+  logo: https://www.antoniofeijao.com/assets/images/Antonio-Feijao-UK.jpeg
   features:
     #- navigation.instant
     - navigation.tracking
